Fix navbar text alignment for hover state (#86)

--- a/frontend/src/assets/global.css
+++ b/frontend/src/assets/global.css
@@ -69,6 +69,8 @@ p.semi {
 }
 
 a {
+	box-sizing: content-box !important;
+	width: max-content;
 	color: var(--pastel-purple);
 }
 
